--- a/index.html
+++ b/index.html
@@ -24,14 +24,31 @@
         <div class="container">
             <a href="#" class="logo">Elzero</a>
             <ul class="main-nav">
-                <li><a href="#article">Articles</a></li>
+                <li><a href="#articles">Articles</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#">Other links</a></li>
             </ul>
         </div>
-        </header>
-        <!-- end header  -->
+    </div>
+    <!-- end header  -->
+    <!-- start landing  -->
+    <div class="landing">
+        <div class="container">
+            <div class="text">
+                <h1>Welcome, To Elzero World</h1>
+                <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and
+                    Events</p>
+            </div>
+            <div class="image">
+                <img src="Images/landing-image.png" alt="">
+            </div>
+        </div>
+        <a href="#articles" class="go-down">
+            <i class="fas fa-angle-double-down fa-2x"></i>
+        </a>
+    </div>
+    <!-- end landing  -->
 </body>
 
 </html>
