--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elzero</title>
+    <title>Lyan </title>
     <!-- render all elements normally -->
     <link rel="stylesheet" href="CSS/normalize.css">
     <!-- font awesome library -->
@@ -22,12 +22,54 @@
     <!-- start header  -->
     <div class="header" id="header">
         <div class="container">
-            <a href="#" class="logo">Elzero</a>
+            <a href="#" class="logo">Lyan</a>
             <ul class="main-nav">
                 <li><a href="#articles">Articles</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#features">Features</a></li>
-                <li><a href="#">Other links</a></li>
+                <li><a href="#">Other links</a>
+                    <!-- start mega-menu -->
+                    <div class="mega-menu">
+                        <div class="image">
+                            <img src="Images/megamenu.png" alt="">
+                        </div>
+                        <ul class="links">
+                            <li>
+                                <a href="#"><i class="far fa-comments fa-fw"></i>Testimonials</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="far fa-user fa-fw"></i>Team Members</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="far fa-building fa-fw"></i>Services</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="far fa-check-circle fa-fw"></i>Our Skills</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="far fa-clipboard fa-fw"></i>How It Works</a>
+                            </li>
+                        </ul>
+                        <ul class="links">
+                            <li>
+                                <a href="#"><i class="far fa-calendar-alt fa-fw"></i>Events</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fas fa-server fa-fw"></i>Pricing Plan</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="far fa-play-circle fa-fw"></i>Top Videos</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="far fa-chart-bar fa-fw"></i>Stats</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fas fa-percent fa-fw"></i>Request A Discount</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- end mega-menu -->
+                </li>
             </ul>
         </div>
     </div>
@@ -36,7 +78,7 @@
     <div class="landing">
         <div class="container">
             <div class="text">
-                <h1>Welcome, To Elzero World</h1>
+                <h1>Welcome, To Lyan World</h1>
                 <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and
                     Events</p>
             </div>
