add articles section to the design

--- a/index.html
+++ b/index.html
@@ -91,7 +91,109 @@
         </a>
     </div>
     <!-- end landing  -->
-    <h2 class="main-title">Main Title</h2>
+    <!-- start Articles -->
+    <div class="articles" id="articles">
+        <h2 class="main-title">articles</h2>
+        <div class="container">
+            <div class="box">
+                <img src="Images/cat-01.jpg" alt="">
+                <div class="content">
+                    <h3>Test Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempora saepe, aperiam eos
+                        tempore ex dignissimos</p>
+                </div>
+                <div class="info">
+                    <a href="#">Read More</a>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="Images/cat-02.jpg" alt="">
+                <div class="content">
+                    <h3>Test Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempora saepe, aperiam eos
+                        tempore ex dignissimos</p>
+                </div>
+                <div class="info">
+                    <a href="#">Read More</a>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="Images/cat-03.jpg" alt="">
+                <div class="content">
+                    <h3>Test Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempora saepe, aperiam eos
+                        tempore ex dignissimos</p>
+                </div>
+                <div class="info">
+                    <a href="#">Read More</a>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="Images/cat-04.jpg" alt="">
+                <div class="content">
+                    <h3>Test Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempora saepe, aperiam eos
+                        tempore ex dignissimos</p>
+                </div>
+                <div class="info">
+                    <a href="#">Read More</a>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="Images/cat-05.jpg" alt="">
+                <div class="content">
+                    <h3>Test Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempora saepe, aperiam eos
+                        tempore ex dignissimos</p>
+                </div>
+                <div class="info">
+                    <a href="#">Read More</a>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="Images/cat-06.jpg" alt="">
+                <div class="content">
+                    <h3>Test Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempora saepe, aperiam eos
+                        tempore ex dignissimos</p>
+                </div>
+                <div class="info">
+                    <a href="#">Read More</a>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="Images/cat-07.jpg" alt="">
+                <div class="content">
+                    <h3>Test Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempora saepe, aperiam eos
+                        tempore ex dignissimos</p>
+                </div>
+                <div class="info">
+                    <a href="#">Read More</a>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="Images/cat-08.jpg" alt="">
+                <div class="content">
+                    <h3>Test Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur tempora saepe, aperiam eos
+                        tempore ex dignissimos</p>
+                </div>
+                <div class="info">
+                    <a href="#">Read More</a>
+                    <i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end Articles -->
 </body>
 
 </html>
