--- a/index.html
+++ b/index.html
@@ -194,6 +194,43 @@
         </div>
     </div>
     <!-- end Articles -->
+    <!-- start gallery  -->
+    <div class="gallery" id="gallery">
+        <h2 class="main-title">gallery</h2>
+        <div class="container">
+            <div class="box">
+                <div class="image">
+                    <img src="Images/gallery-01.png" alt="">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="Images/gallery-02.png" alt="">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="Images/gallery-03.jpg" alt="">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="Images/gallery-04.png" alt="">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="Images/gallery-05.jpg" alt="">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="Images/gallery-06.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end gallery  -->
 </body>
 
 </html>
