add features section

--- a/index.html
+++ b/index.html
@@ -231,6 +231,37 @@
         </div>
     </div>
     <!-- end gallery  -->
+    <!-- start Features  -->
+    <div class="features" id="features">
+        <h2 class="main-title">features</h2>
+        <div class="container">
+            <div class="content quality">
+                <div class="image-holder">
+                    <img src="Images/features-01.jpg" alt="">
+                </div>
+                <h2>Quality</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                <a href="#">More</a>
+            </div>
+            <div class="content time">
+                <div class="image-holder">
+                    <img src="Images/features-02.jpg" alt="">
+                </div>
+                <h2>Time</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                <a href="#">More</a>
+            </div>
+            <div class="content passion">
+                <div class="image-holder">
+                    <img src="Images/features-03.jpg" alt="">
+                </div>
+                <h2>Passion</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                <a href="#">More</a>
+            </div>
+        </div>
+    </div>
+    <!-- end Features  -->
 </body>
 
 </html>
