add testimonials section

--- a/index.html
+++ b/index.html
@@ -262,6 +262,103 @@
         </div>
     </div>
     <!-- end Features  -->
+    <!-- start testimonials  -->
+    <div class="testimonials" id="testimonials">
+        <div class="main-title">testimonials</div>
+        <div class="container">
+            <div class="box">
+                <img src="Images/avatar-01.png" alt="">
+                <h3>Mohammad Farag</h3>
+                <span class="title">Full Stack Web Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus
+                    quaerat ducimus</p>
+            </div>
+            <div class="box">
+                <img src="Images/avatar-02.png" alt="">
+                <h3>Mohammad Ibrahim</h3>
+                <span class="title">Full Stack Web Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus
+                    quaerat ducimus</p>
+            </div>
+            <div class="box">
+                <img src="Images/avatar-03.png" alt="">
+                <h3>Shady Nabil</h3>
+                <span class="title">Full Stack Web Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus
+                    quaerat ducimus</p>
+            </div>
+            <div class="box">
+                <img src="Images/avatar-04.png" alt="">
+                <h3>Amr Hendawy</h3>
+                <span class="title">Full Stack Web Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus
+                    quaerat ducimus</p>
+            </div>
+            <div class="box">
+                <img src="Images/avatar-05.png" alt="">
+                <h3>Sherief Ashraf</h3>
+                <span class="title">Full Stack Web Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus
+                    quaerat ducimus</p>
+            </div>
+            <div class="box">
+                <img src="Images/avatar-06.png" alt="">
+                <h3>Osama Mohammad</h3>
+                <span class="title">Full Stack Web Developer</span>
+                <div class="rate">
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="filled fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
+                    natus
+                    quaerat ducimus</p>
+            </div>
+        </div>
+    </div>
+    <!-- end testimonials  -->
 </body>
 
 </html>
