add team members section

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <!-- end Features  -->
     <!-- start testimonials  -->
     <div class="testimonials" id="testimonials">
-        <div class="main-title">testimonials</div>
+        <h2 class="main-title">testimonials</h2>
         <div class="container">
             <div class="box">
                 <img src="Images/avatar-01.png" alt="">
@@ -355,6 +355,132 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est
                     natus
                     quaerat ducimus</p>
+            </div>
+        </div>
+    </div>
+    <!-- start team member  -->
+    <div class="team-members" id="team-members">
+        <h2 class="main-title">team members</h2>
+        <div class="container">
+            <div class="box">
+                <div class="data">
+                    <img src="Images/team-01.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="data">
+                    <img src="Images/team-02.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="data">
+                    <img src="Images/team-03.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="data">
+                    <img src="Images/team-04.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="data">
+                    <img src="Images/team-05.png" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="data">
+                    <img src="Images/team-06.png" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="data">
+                    <img src="Images/team-07.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="data">
+                    <img src="Images/team-08.jpg" alt="">
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="info">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
             </div>
         </div>
     </div>
