add our-skills section

--- a/index.html
+++ b/index.html
@@ -535,6 +535,41 @@
         </div>
     </div>
     <!-- end services  -->
+    <!-- start our-skills  -->
+    <div class="our-skills" id="our-skills">
+        <h2 class="main-title">our skills</h2>
+        <div class="container">
+            <div class="image">
+                <img src="Images/skills.png" alt="">
+            </div>
+            <div class="content">
+                <div class="prog-holder">
+                    <h4>HTML</h4>
+                    <div class="prog" data-progress="80%">
+                        <span style="width: 80%"></span>
+                    </div>
+                </div>
+                <div class="prog-holder">
+                    <h4>CSS</h4>
+                    <div class="prog" data-progress="85%">
+                        <span style="width: 85%"></span>
+                    </div>
+                </div>
+                <div class="prog-holder">
+                    <h4>JAVA SCRIPT</h4>
+                    <div class="prog" data-progress="70%">
+                        <span style="width: 70%"></span>
+                    </div>
+                </div>
+                <div class="prog-holder">
+                    <h4>PYTHON</h4>
+                    <div class="prog" data-progress="80%">
+                        <span style="width: 80%"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end our-skills  -->
 </body>
 
 </html>
