--- a/index.html
+++ b/index.html
@@ -570,6 +570,41 @@
             </div>
         </div>
         <!-- end our-skills  -->
+        <!-- start work steps -->
+        <div class="work-steps" id="work-steps">
+            <h2 class="main-title">how it works?</h2>
+            <div class="container">
+                <img src="Images/work-steps.png" alt="" class="image">
+                <div class="info">
+                    <div class="box">
+                        <img src="Images/work-steps-1.png" alt="">
+                        <div class="text">
+                            <h3>Business Analysis</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
+                                quisquam quis laborum recusandae debitis vel</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="Images/work-steps-2.png" alt="">
+                        <div class="text">
+                            <h3>Architecture</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
+                                quisquam quis laborum recusandae debitis vel</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="Images/work-steps-3.png" alt="">
+                        <div class="text">
+                            <h3>Developement</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
+                                quisquam quis laborum recusandae debitis vel</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- end work steps -->
 </body>
 
 </html>
