add Events section

--- a/index.html
+++ b/index.html
@@ -605,6 +605,43 @@
             </div>
         </div>
         <!-- end work steps -->
+        <!-- start events  -->
+        <div class="events" id="events">
+            <h2 class="main-title">latest events</h2>
+            <div class="container">
+                <img src="Images/events.png" alt="">
+                <div class="info">
+                    <div class="time">
+                        <div class="unit">
+                            <span>08</span>
+                            <span>Days</span>
+                        </div>
+                        <div class="unit">
+                            <span>08</span>
+                            <span>Hours</span>
+                        </div>
+                        <div class="unit">
+                            <span>08</span>
+                            <span>Minutes</span>
+                        </div>
+                        <div class="unit">
+                            <span>08</span>
+                            <span>Seconds</span>
+                        </div>
+                    </div>
+                    <h2 class="title">Tech Masters Event 2021</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto ut
+                        adipisci quam ratione aliquam excepturi nulla in harum, veritatis porro</p>
+                </div>
+                <div class="subscribe">
+                    <form action="">
+                        <input type="email" name="email" placeholder="Enter Your Email">
+                        <input type="submit" value="subscribe">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- end events  -->
 </body>
 
 </html>
