--- a/index.html
+++ b/index.html
@@ -569,135 +569,164 @@
                 </div>
             </div>
         </div>
-        <!-- end our-skills  -->
-        <!-- start work steps -->
-        <div class="work-steps" id="work-steps">
-            <h2 class="main-title">how it works?</h2>
-            <div class="container">
-                <img src="Images/work-steps.png" alt="" class="image">
-                <div class="info">
-                    <div class="box">
-                        <img src="Images/work-steps-1.png" alt="">
-                        <div class="text">
-                            <h3>Business Analysis</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
-                                quisquam quis laborum recusandae debitis vel</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <img src="Images/work-steps-2.png" alt="">
-                        <div class="text">
-                            <h3>Architecture</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
-                                quisquam quis laborum recusandae debitis vel</p>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <img src="Images/work-steps-3.png" alt="">
-                        <div class="text">
-                            <h3>Developement</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
-                                quisquam quis laborum recusandae debitis vel</p>
-                        </div>
+    </div>
+    <!-- end our-skills  -->
+    <!-- start work steps -->
+    <div class="work-steps" id="work-steps">
+        <h2 class="main-title">how it works?</h2>
+        <div class="container">
+            <img src="Images/work-steps.png" alt="" class="image">
+            <div class="info">
+                <div class="box">
+                    <img src="Images/work-steps-1.png" alt="">
+                    <div class="text">
+                        <h3>Business Analysis</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
+                            quisquam quis laborum recusandae debitis vel</p>
                     </div>
                 </div>
+                <div class="box">
+                    <img src="Images/work-steps-2.png" alt="">
+                    <div class="text">
+                        <h3>Architecture</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
+                            quisquam quis laborum recusandae debitis vel</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="Images/work-steps-3.png" alt="">
+                    <div class="text">
+                        <h3>Developement</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati
+                            quisquam quis laborum recusandae debitis vel</p>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </div>
+    <!-- end work steps -->
+    <!-- start events  -->
+    <div class="events" id="events">
+        <h2 class="main-title">latest events</h2>
+        <div class="container">
+            <img src="Images/events.png" alt="">
+            <div class="info">
+                <div class="time">
+                    <div class="unit">
+                        <span>08</span>
+                        <span>Days</span>
+                    </div>
+                    <div class="unit">
+                        <span>08</span>
+                        <span>Hours</span>
+                    </div>
+                    <div class="unit">
+                        <span>08</span>
+                        <span>Minutes</span>
+                    </div>
+                    <div class="unit">
+                        <span>08</span>
+                        <span>Seconds</span>
+                    </div>
+                </div>
+                <h2 class="title">Tech Masters Event 2021</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto ut
+                    adipisci quam ratione aliquam excepturi nulla in harum, veritatis porro</p>
+            </div>
+            <div class="subscribe">
+                <form action="">
+                    <input type="email" name="email" placeholder="Enter Your Email">
+                    <input type="submit" value="subscribe">
+                </form>
             </div>
         </div>
-        <!-- end work steps -->
-        <!-- start events  -->
-        <div class="events" id="events">
-            <h2 class="main-title">latest events</h2>
-            <div class="container">
-                <img src="Images/events.png" alt="">
-                <div class="info">
-                    <div class="time">
-                        <div class="unit">
-                            <span>08</span>
-                            <span>Days</span>
-                        </div>
-                        <div class="unit">
-                            <span>08</span>
-                            <span>Hours</span>
-                        </div>
-                        <div class="unit">
-                            <span>08</span>
-                            <span>Minutes</span>
-                        </div>
-                        <div class="unit">
-                            <span>08</span>
-                            <span>Seconds</span>
-                        </div>
-                    </div>
-                    <h2 class="title">Tech Masters Event 2021</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto ut
-                        adipisci quam ratione aliquam excepturi nulla in harum, veritatis porro</p>
+    </div>
+    <!-- end events  -->
+    <!-- start pricing  -->
+    <div class="pricing" id="pricing">
+        <h2 class="main-title">pricing plans</h2>
+        <div class="container">
+            <div class="box">
+                <div class="title">Basic</div>
+                <img src="Images/hosting-basic.png" alt="">
+                <div class="price">
+                    <span class="amount">$15</span>
+                    <span class="time">Per Month</span>
                 </div>
-                <div class="subscribe">
-                    <form action="">
-                        <input type="email" name="email" placeholder="Enter Your Email">
-                        <input type="submit" value="subscribe">
-                    </form>
+                <ul>
+                    <li>10GB HDD Space</li>
+                    <li>5 Email Addresses</li>
+                    <li>2 Subdomains</li>
+                    <li>4 Databases</li>
+                    <li>Basic Support</li>
+                </ul>
+                <a href="#">Choose Plan</a>
+            </div>
+            <div class="box popular">
+                <div class="label">Most Popular</div>
+                <div class="title">Advanced</div>
+                <img src="Images/hosting-advanced.png" alt="">
+                <div class="price">
+                    <span class="amount">$25</span>
+                    <span class="time">Per Month</span>
+                </div>
+                <ul>
+                    <li>20GB HDD Space</li>
+                    <li>10 Email Addresses</li>
+                    <li>5 Subdomains</li>
+                    <li>8 Databases</li>
+                    <li>Advanced Support</li>
+                </ul>
+                <a href="#">Choose Plan</a>
+            </div>
+            <div class="box">
+                <div class="title">Professional</div>
+                <img src="Images/hosting-basic.png" alt="">
+                <div class="price">
+                    <span class="amount">45$</span>
+                    <span class="time">Per Month</span>
+                </div>
+                <ul>
+                    <li>50GB HDD Space</li>
+                    <li>20 Email Addresses</li>
+                    <li>10 Subdomains</li>
+                    <li>20 Databases</li>
+                    <li>Professional Support</li>
+                </ul>
+                <a href="#">Choose Plan</a>
+            </div>
+        </div>
+    </div>
+    <!-- end pricing  -->
+    <!-- start videos -->
+    <div class="videos" id="videos">
+        <h2 class="main-title">Top videos</h2>
+        <div class="container">
+            <div class="holder">
+                <div class="list">
+                    <div class="name">
+                        Top Videos
+                        <i class="fas fa-random"></i>
+                    </div>
+                    <ul>
+                        <li>How To Create Sub Domain <span>05:18</span></li>
+                        <li> Playing With The DNS <span>03:18</span></li>
+                        <li>Everything About The Virtual Hosts <span>05:25</span></li>
+                        <li>How To Monitor Your Website <span>04:16</span></li>
+                        <li>Uncharted Beating The last Boss <span>07:30</span></li>
+                        <li>Ys Oath In Felghana Overview <span>03:12</span></li>
+                        <li>Ys Series All Games Ending <span>06:43</span></li>
+                    </ul>
+                </div>
+                <div class="preview">
+                    <img src="Images/video-preview.jpg" alt="">
+                    <div class="info">Everything About The Virtual Hosts</div>
                 </div>
             </div>
         </div>
-        <!-- end events  -->
-        <!-- start pricing  -->
-        <div class="pricing" id="pricing">
-            <h2 class="main-title">pricing plans</h2>
-            <div class="container">
-                <div class="box">
-                    <div class="title">Basic</div>
-                    <img src="Images/hosting-basic.png" alt="">
-                    <div class="price">
-                        <span class="amount">$15</span>
-                        <span class="time">Per Month</span>
-                    </div>
-                    <ul>
-                        <li>10GB HDD Space</li>
-                        <li>5 Email Addresses</li>
-                        <li>2 Subdomains</li>
-                        <li>4 Databases</li>
-                        <li>Basic Support</li>
-                    </ul>
-                    <a href="#">Choose Plan</a>
-                </div>
-                <div class="box popular">
-                    <div class="label">Most Popular</div>
-                    <div class="title">Advanced</div>
-                    <img src="Images/hosting-advanced.png" alt="">
-                    <div class="price">
-                        <span class="amount">$25</span>
-                        <span class="time">Per Month</span>
-                    </div>
-                    <ul>
-                        <li>20GB HDD Space</li>
-                        <li>10 Email Addresses</li>
-                        <li>5 Subdomains</li>
-                        <li>8 Databases</li>
-                        <li>Advanced Support</li>
-                    </ul>
-                    <a href="#">Choose Plan</a>
-                </div>
-                <div class="box">
-                    <div class="title">Professional</div>
-                    <img src="Images/hosting-basic.png" alt="">
-                    <div class="price">
-                        <span class="amount">45$</span>
-                        <span class="time">Per Month</span>
-                    </div>
-                    <ul>
-                        <li>50GB HDD Space</li>
-                        <li>20 Email Addresses</li>
-                        <li>10 Subdomains</li>
-                        <li>20 Databases</li>
-                        <li>Professional Support</li>
-                    </ul>
-                    <a href="#">Choose Plan</a>
-                </div>
-            </div>
-        </div>
-        <!-- end pricing  -->
+    </div>
+    <!-- end videos -->
 </body>
 
 </html>
