--- a/index.html
+++ b/index.html
@@ -727,6 +727,33 @@
         </div>
     </div>
     <!-- end videos -->
+    <!-- start stats  -->
+    <div class="stats" id="stats">
+        <h2>Our Awesome Stats</h2>
+        <div class="container">
+            <div class="box">
+                <i class="far fa-user fa-3x"></i>
+                <span class="number">150</span>
+                <span class="text">Clients</span>
+            </div>
+            <div class="box">
+                <i class="fas fa-code fa-3x"></i>
+                <span class="number">135</span>
+                <span class="text">Projects</span>
+            </div>
+            <div class="box">
+                <i class="fas fa-globe-asia fa-3x"></i>
+                <span class="number">50</span>
+                <span class="text">Countries</span>
+            </div>
+            <div class="box">
+                <i class="far fa-money-bill-alt fa-3x"></i>
+                <span class="number">500</span>
+                <span class="text">Money</span>
+            </div>
+        </div>
+    </div>
+    <!-- end stats  -->
 </body>
 
 </html>
