--- a/index.html
+++ b/index.html
@@ -754,6 +754,31 @@
         </div>
     </div>
     <!-- end stats  -->
+    <!-- start discount  -->
+    <div class="discount" id="discount">
+        <div class="image">
+            <div class="content">
+                <h2>We Have A Discount</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum esse accusantium maiores ducimus
+                    maxime qui, nesciunt odit, dolores voluptas asperiores incidunt animi totam necessitatibus? Omnis
+                    sed nostrum sequi nesciunt sapiente?</p>
+                <img src="Images/discount.png" alt="">
+            </div>
+        </div>
+        <div class="form">
+            <div class="content">
+                <h2>Request A Discount</h2>
+                <form action="">
+                    <input class="input" type="text" name="name" placeholder="Your Name">
+                    <input class="input" type="email" name="mail" placeholder="Your Email">
+                    <input class="input" type="tel" name="telephone" placeholder="Your Phone Number">
+                    <textarea class="input" name="" placeholder="Tell Us About Your Needs"></textarea>
+                    <input type="submit" value="send">
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- end discount  -->
 </body>
 
 </html>
