--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         </div>
     </div>
     <!-- end Articles -->
+    <div class="spikes"></div>
     <!-- start gallery  -->
     <div class="gallery" id="gallery">
         <h2 class="main-title">gallery</h2>
@@ -486,6 +487,7 @@
         </div>
     </div>
     <!-- end team members  -->
+    <div class="spikes"></div>
     <!-- start services  -->
     <div class="services" id="services">
         <h2 class="main-title">services</h2>
@@ -608,6 +610,8 @@
     <!-- end work steps -->
     <!-- start events  -->
     <div class="events" id="events">
+        <div class="dots dots-up"></div>
+        <div class="dots dots-down"></div>
         <h2 class="main-title">latest events</h2>
         <div class="container">
             <img src="Images/events.png" alt="">
@@ -645,6 +649,8 @@
     <!-- end events  -->
     <!-- start pricing  -->
     <div class="pricing" id="pricing">
+        <div class="dots dots-up"></div>
+        <div class="dots dots-down"></div>
         <h2 class="main-title">pricing plans</h2>
         <div class="container">
             <div class="box">
@@ -772,13 +778,72 @@
                     <input class="input" type="text" name="name" placeholder="Your Name">
                     <input class="input" type="email" name="mail" placeholder="Your Email">
                     <input class="input" type="tel" name="telephone" placeholder="Your Phone Number">
-                    <textarea class="input" name="" placeholder="Tell Us About Your Needs"></textarea>
+                    <textarea class="input" name="textarea" placeholder="Tell Us About Your Needs"></textarea>
                     <input type="submit" value="send">
                 </form>
             </div>
         </div>
     </div>
     <!-- end discount  -->
+    <!-- start footer   -->
+    <footer>
+        <div class="container">
+            <div class="box">
+                <h3>Lyan</h3>
+                <ul class="social">
+                    <li>
+                        <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
+                    </li>
+                </ul>
+                <p class="text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. In placeat veniam maiores, ab sequi
+                    necessitatibus?
+                </p>
+            </div>
+            <div class="box">
+                <ul class="links">
+                    <li><a href="#">Important Link 1</a></li>
+                    <li><a href="#">Important Link 2</a></li>
+                    <li><a href="#">Important Link 3</a></li>
+                    <li><a href="#">Important Link 4</a></li>
+                    <li><a href="#">Important Link 5</a></li>
+                </ul>
+            </div>
+            <div class="box">
+                <div class="line">
+                    <i class="fas fa-map-marker-alt fa-fw"></i>
+                    <div class="info">Syria, Aleppo, Afrin, Villat Street</div>
+                </div>
+                <div class="line">
+                    <i class="far fa-clock fa-fw"></i>
+                    <div class="info">Available : From 9:00 am TO 5:00 pm</div>
+                </div>
+                <div class="line">
+                    <i class="fas fa-phone-volume fa-fw"></i>
+                    <div class="info">
+                        <span>+905388894222</span>
+                        <span>+963951369060</span>
+                    </div>
+                </div>
+            </div>
+            <div class="box footer-gallery">
+                <img src="Images/gallery-01.png" alt="">
+                <img src="Images/gallery-02.png" alt="">
+                <img src="Images/gallery-03.jpg" alt="">
+                <img src="Images/gallery-04.png" alt="">
+                <img src="Images/gallery-05.jpg" alt="">
+                <img src="Images/gallery-06.png" alt="">
+            </div>
+        </div>
+        <p class="copy-right">Made with <i class="fa fa-heart"></i> By Hamza &copy;2021 </p>
+    </footer>
+    <!-- end  footer   -->
 </body>
 
 </html>
