--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- font awesome library -->
     <link rel="stylesheet" href="CSS/all.min.css">
     <!-- main css file -->
-    <link rel="stylesheet" href="CSS/elzero.css">
+    <link rel="stylesheet" href="CSS/lyan.css">
     <!-- Google fonts-cairo font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
